# MultiTherm

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: rust.yml
mt-fw/: Cargo.toml  README.md
mt-fw/src/: main.rs
mt-hw/: README.md
mt-hw/mt-hub/: README.md
mt-hw/mt-ribbon/: README.md  fp-info-cache  fp-lib-table  mt-ribbon.kicad_pcb  mt-ribbon.kicad_prl  mt-ribbon.kicad_pro  mt-ribbon.kicad_sch
mt-hw/mt-ribbon/jumper-small.pretty/: SolderJumper-2_P0.43mm_Open_Pad0.3x0.75mm.kicad_mod
mt-relay/: Cargo.toml  README.md
mt-relay/src/: main.rs
