[package]
name = "mt-fw"
version = "0.1.0"
authors = ["phansel <github@paulhansel.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = [ "esp32c6" ] }
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
log = { version = "0.4.22" }
esp-alloc = "0.5.0"

[features]
default = []
selftest = [] # whether or not debug logs are printed

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"


[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
