[package]
name = "mt-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
#tokio = { version = "1.32.0", features = ["macros", "rt", "io-std", "io-util", "net"] }
#serial2-tokio = "0.1.13"
serialport = "4.6.0"
nalgebra = "0.33.2"
#chrono = "0.4.38"

npyz = {version = "0.8", features = ["derive", "complex", "npz", "arrayvec", "half"]}
#npyz = "0.8.3"
